# assignment2_rt

./: CMakeLists.txt  package.xml
launch/: spawn_robot.launch.py  world.launch.py
src/a2_rt_controller/: package.xml  setup.cfg  setup.py
src/a2_rt_controller/a2_rt_controller/: custom_msg_subscriber.py  robot_controller.py  terminal_interface.py
src/a2_rt_controller/launch/: robot_control.launch.py
src/a2_rt_interfaces/: CMakeLists.txt  package.xml
src/a2_rt_interfaces/launch/: service_nodes.launch.py
src/a2_rt_interfaces/src/: avg_vel_service.cpp  threshold_service.cpp
src/a2_rt_interfaces/src/msg/: closest_obst_info.msg
src/a2_rt_interfaces/srv/: AverageVelocities.srv  ChangeThreshold.srv
src/a2_rt_simulation/launch/: spawn_robot.launch.py  world.launch.py
src/a2_rt_simulation/urdf/: mogi_bot.urdf
urdf/: mogi_bot.urdf
